<resources>
    <string name="app_name" translatable="false">GraciasDoc</string>
    <string name="title_activity_main" translatable="false">GraciasDoc</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_consultation_new">New consultation</string>
    <string name="drawer_consultation_history">Consultation history</string>
    <string name="drawer_help">Help</string>
    <string name="drawer_terms">Terms and conditions</string>
    <string name="drawer_checkout">Checkout</string>
    <string name="drawer_user_profile">User profile</string>
    <string name="consultation_details_title">Consultation details</string>
    <string name="user_register_name">Name and Surname</string>
    <string name="user_register_patient">I\'m patient</string>
    <string name="user_register_medic">I\'m medic</string>
    <string name="user_register_surname">Surname</string>
    <string name="user_register_email">Email</string>
    <string name="user_register_date">Birth date</string>
    <string name="user_register_medical">Medical Care</string>
    <string name="user_register_phone">Phone</string>
    <string name="user_register_plate">Plate</string>
    <string name="user_register_button">Register</string>
    <string name="user_register_title">Register</string>
    <string name="user_login_title">Login</string>
    <string name="user_login_error_positive">OK</string>
    <string name="user_login_error_message">Incorrect user or password</string>
    <string name="user_login_email">Email</string>
    <string name="user_login_password">Password</string>
    <string name="user_login_button">Enter</string>
    <string name="user_login_register">I\'m not registered</string>
    <string name="user_login_welcome">Welcome</string>
    <string name="user_login_error_field">Please enter a valid email and password.</string>
    <string name="user_login_loading">Loading…</string>
    <string name="user_register_terms">Accept terms and conditions</string>
    <string name="user_register_password">Password</string>
    <string name="user_register_incomplete_fields">Complete all the fields.</string>
    <string name="user_register_success_content">Register successfully. Welcome!</string>
    <string name="user_register_success_positive">OK</string>
    <string name="consultation_new_summary_desc">Ingrese una descripción</string>
    <string name="consultation_new_details_hint">Enter all the details that can help the medic to make a diagnostic.</string>
    <string name="consultation_new_picture_desc">Puede ingresar una foto relacionada a su consulta</string>
    <string name="history_help_title">Últimas consultas realizadas a nuestros especialistas.</string>
    <string name="consultation_new_media">Foto o video</string>
    <string name="consultation_approve_button">Take consultation</string>
    <string name="consultation_details_text_input">Enter consultation</string>
    <string name="consultation_new_empty_fields">Please fill all the fields</string>
    <string name="consultation_new_success_message">Consultation created successfully</string>
    <string name="consultation_approve_title">Take Consultation</string>
    <string name="consultation_history_empty_text">No assigned consultations</string>
    <string name="menu_consultation_close">Close consultation</string>
    <string name="menu_consultation_incident">Report incident</string>
    <string name="consultation_taken_success">Consultation taken successfully</string>
    <string name="consultation_taken_error">Error, consultation already taken</string>
    <string name="consultation_create_step_patient">Patient</string>
    <string name="consultation_create_step_description">Description</string>
    <string name="consultation_create_step_allergies">Allergies</string>
    <string name="consultation_create_step_time">Frequency</string>
    <string name="consultation_create_step_medications">Medications</string>
    <string name="consultation_create_step_conditions">Diseases</string>
    <string name="consultation_create_step_symptoms">Symptoms</string>
    <string name="consultation_create_step_medication_hint">Medicine</string>
    <string name="consultation_create_step_medication_new">Add another medicine</string>
    <string name="consultation_create_step_allergy_hint">Allergy</string>
    <string name="consultation_create_step_allergy_new">Add another allergy</string>
    <string name="consultation_create_error">Error creating Consultation</string>
    <string name="consultation_create_step_allergy_question">Por favor indicanos si sos alérgico…</string>
    <string name="consultation_create_step_medications_question">Por favor indica si estás tomando alguna medicación. Si es así, ¿desde cuándo?</string>
    <string name="consultation_create_step_description_question">Por favor, describi brevemente lo que motiva tu consulta</string>
    <string name="consultation_create_step_conditions_question">Por favor hacenos saber si padeces alguna de las siguientes enfermedades o condiciones:</string>
    <string name="consultation_create_step_patient_question">¿Quién es el paciente?</string>
    <string name="consultation_create_step_symptoms_question">¿Padeces alguno de estos síntomas?</string>
    <string name="consultation_create_cancel_title">Do you want to cancel?</string>
    <string name="consultation_create_cancel_positive">Yes</string>
    <string name="consultation_create_cancel_negative">No</string>
    <string name="wizard_third_description">Send pictures and videos</string>
    <string name="wizard_start">Start</string>
    <string name="wizard_second_description">Ask anything related to health</string>
    <string name="wizard_fourth_description">Get inmediatly responses!</string>
    <string name="wizard_first_description">Ask medics ONLINE</string>
    <string-array name="consultation_new_medications_when">
        <item>¿Desde cuando?</item>
        <item>Semana pasada</item>
        <item>Mes pasado</item>
        <item>Año pasado</item>
        <item>Más de un año</item>
    </string-array>
    <string-array name="consultation_create_symptoms_general">
        <item>Fiebre</item>
        <item>Perdida de peso</item>
        <item>Dificultades para dormir</item>
        <item>Cambios de humor</item>
        <item>Cansancio</item>
        <item>Viajes recientes al exterior</item>
        <item>Hospitalizado reciente</item>
    </string-array>
    <string-array name="consultation_create_symptoms_head">
        <item>Dolor de cabeza</item>
        <item>Mareos</item>
        <item>Problemas de visión</item>
        <item>Sangrado de nariz</item>
        <item>Sangrado de oreja</item>
        <item>Congestión</item>
        <item>Dolor de garganta</item>
        <item>Alergia</item>
        <item>Perdida de memoria</item>
        <item>Caídas</item>
    </string-array>
    <string-array name="consultation_create_symptoms_chest">
        <item>Dolor/presión en el pecho</item>
        <item>Palpitaciones</item>
        <item>Tos</item>
        <item>Espasmo</item>
        <item>Dificultades para respirar</item>
        <item>Perdida de resistencia física</item>
        <item>Pasado como fumador</item>
    </string-array>
    <string-array name="consultation_create_symptoms_intestine">
        <item>Náusea</item>
        <item>Vómito</item>
        <item>Dificultad o problemas para tragar</item>
        <item>Acidez o reflujo</item>
        <item>Diarrea</item>
        <item>Constipación</item>
        <item>Dolor abdominal</item>
    </string-array>
    <string-array name="consultation_create_symptoms_genital">
        <item>Dolor renal</item>
        <item>Dificultades para oirinar</item>
        <item>Sangre en la orina</item>
        <item>Aumento frecuencia de orina</item>
        <item>Enfermedades o infecciones de transmisión sexual</item>
        <item>Período menstrual irregular</item>
        <item>Sangrado vaginal</item>
        <item>Flujo vaginal</item>
        <item>Secreción del pene</item>
        <item>Hinchazón testicular</item>
        <item>Dolor testicular</item>
    </string-array>
    <string-array name="consultation_create_symptoms_muscular">
        <item>Dolor muscular</item>
        <item>Movilidad reducida</item>
        <item>Debilidad muscular</item>
        <item>Dolor de espalda</item>
        <item>Hematomas</item>
        <item>Dolor de articulaciones</item>
    </string-array>
    <string-array name="consultation_create_symptoms_skin">
        <item>Picazón</item>
        <item>Sangrado</item>
        <item>Hinchazón</item>
        <item>Erupción cutánea</item>
        <item>Protuberancia cutánea</item>
        <item>Hematomas</item>
        <item>Llagas</item>
        <item>Picaduras</item>
    </string-array>
    <string-array name="consultation_create_conditions">
        <item>Cancer</item>
        <item>Diabetes</item>
        <item>Enfermedades cardiacas</item>
        <item>Presión alta</item>
        <item>Colesterol alto</item>
        <item>Asma</item>
        <item>Depresión</item>
        <item>Artritis</item>
        <item>Tiroides</item>
        <item>Embarazo</item>
        <item>ACV</item>
        <item>Otro</item>
    </string-array>
    <string name="ms_continue">Continue</string>
    <string name="ms_end">Complete</string>
    <string name="ms_next">Next</string>
    <string name="ms_optional">Optional</string>
    <string name="ms_prev">Previous</string>
    <string name="ms_text_step">Step $current of $total</string>
    <string name="consultation_create_step_patient_error">Debe seleccionar una opción</string>
    <string name="consultation_create_step_description_error">Debe ingresar una descripción</string>
    <string name="consultation_create_home_clinics">Clinics</string>
    <string name="consultation_create_home_pediatrics">Pediatrics</string>
    <string name="consultation_create_home_dermatology">Dermatology</string>
    <string name="consultation_create_home_nutrition">Nutrition</string>
    <string name="consultation_create_home_general">Ask a medic now</string>
    <string name="consultation_create_step_category">Category</string>
    <string name="consultation_new_details">Detao;s</string>
    <string name="consultation_create_step_time_error">Select one option.</string>
    <string name="consultation_create_step_time_question">¿Cuándo te empezaste a sentir de esta manera?</string>
    <string name="consultation_details_dialog_content">Está seguro que desea cerrar la consulta?</string>
    <string name="consultation_details_dialog_positive">Si</string>
    <string name="consultation_details_dialog_negative">No</string>
    <string name="consultation_history_name_pending">Pendiente de aprobación</string>
    <string name="consultation_details_close_input_hint">La consulta fue cerrada</string>
    <string name="consultation_details_message_send">Enviar mensaje</string>
    <string name="user_register_password2">Repeat password</string>
    <string name="user_register_password_not_match">Password does not match</string>
    <string name="user_register_service_error">Service error</string>
    <string name="user_register_terms_uncheck">Terms must be accepted</string>
    <string name="general_terms_url">http://graciasdoc.com/tyc.html</string>
    <string name="consultation_rating_title">Puntaje de consulta</string>
    <string name="consultation_rating_negative">No gracias</string>
    <string name="consultation_rating_positive">Enviar</string>
    <string name="consultation_comment_hint">Ingrese un comentario</string>
    <string name="consultation_rating_empty">Rating not entered</string>
    <string name="consultation_rating_empty_comment">Por favor ingrese un comentario</string>
    <string name="consultation_rating_success">Muchas gracias por su comentario!</string>
</resources>