<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/consultation_approve_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:paddingBottom="20dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="20dp">

                <ImageView
                    android:id="@+id/consultation_approve_patient_picture"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    tools:src="@drawable/pic_medic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/consultation_approve_patient_picture"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/consultation_approve_patient_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="#666"
                        android:textSize="15sp"
                        tools:text="Alberto Fernandez" />

                    <TextView
                        android:id="@+id/consultation_approve_patient_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="sans-serif"
                        android:textColor="#666"
                        android:textSize="14sp"
                        tools:text="Edad: 25 años" />

                    <TextView
                        android:id="@+id/consultation_approve_patient_medical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textColor="#666"
                        android:textSize="14sp"
                        tools:text="Obra social: OSDE" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/consultation_new_category_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/consultation_create_step_category"
                        android:textColor="#666"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/consultation_approve_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-normal"
                        android:maxLines="1"
                        android:textSize="15sp"
                        tools:text="Contenido de la categoría." />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ccc" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/consultation_create_step_patient"
                        android:textColor="#666"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/consultation_approve_patient"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-normal"
                        android:maxLines="1"
                        android:textSize="15sp"
                        tools:text="@string/consultation_create_step_patient_question" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ccc" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/consultation_create_step_description"
                        android:textColor="#666"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/consultation_approve_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-normal"
                        android:textSize="15sp"
                        tools:text="@string/consultation_create_step_description_question" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ccc" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/consultation_create_step_time"
                        android:textColor="#666"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/consultation_approve_frequency"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-normal"
                        android:textSize="15sp"
                        tools:text="@string/consultation_create_step_time_question" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ccc" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/consultation_create_step_medications"
                        android:textColor="#666"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/consultation_approve_medications"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-normal"
                        android:textSize="15sp"
                        tools:text="@string/consultation_create_step_medications_question" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ccc" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/consultation_create_step_allergies"
                        android:textColor="#666"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/consultation_approve_allergies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-normal"
                        android:textSize="15sp"
                        tools:text="@string/consultation_create_step_allergy_question" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ccc" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/consultation_create_step_symptoms"
                        android:textColor="#666"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/consultation_approve_symptoms"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-normal"
                        android:textSize="15sp"
                        tools:text="@string/consultation_create_step_symptoms_question" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ccc" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/consultation_create_step_conditions"
                        android:textColor="#666"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/consultation_approve_conditions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-normal"
                        android:textSize="15sp"
                        tools:text="@string/consultation_create_step_conditions_question" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/consultation_approve_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/consultation_approve_button"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>